[gd_scene load_steps=2 format=2]

[ext_resource path="res://core/pimnet/pim/side_menu/panels/spawn_panel/spawn_panel.gd" type="Script" id=1]

[node name="SpawnPanel" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_editor_description_": ""
}

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="PanelContainer/MainContainer"]
margin_right = 1266.0
margin_bottom = 14.0
text = "Drag Objects"

[node name="Duplicator" type="Node" parent="."]

[node name="SubContainerPrototype" type="CenterContainer" parent="Duplicator"]
unique_name_in_owner = true
margin_right = 1266.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 1

[node name="SpawnerContainer" type="Control" parent="Duplicator/SubContainerPrototype"]
margin_left = 633.0
margin_top = 50.0
margin_right = 633.0
margin_bottom = 50.0
mouse_filter = 1

[connection signal="resized" from="PanelContainer" to="." method="_on_PanelContainer_resized"]
